Wrapping list now correctly occupies vertical space - overflow: hidden set on ul.

--- a/src/main/resources/sass/scss/sources/lists.scss
+++ b/src/main/resources/sass/scss/sources/lists.scss
@@ -31,6 +31,10 @@
     list-style-type: decimal;
 }
 
+.ft-list-wrapping {
+    overflow: hidden;
+}
+
 .ft-list-wrapping .ft-list-item {
     float: left;
     clear: none;
